algumas mudanças no design

--- a/exercicios/022_t/treino.html
+++ b/exercicios/022_t/treino.html
@@ -29,6 +29,7 @@
             color: white;
             text-align: center;
             padding: 50px;
+            box-shadow: 1px 1px 1px black;
         }
 
         h1{
@@ -45,6 +46,7 @@
             background-repeat: no-repeat;
             background-position: center bottom;
             background-attachment: fixed;
+            padding-top: 12px;
         }
 
         article{
@@ -60,10 +62,11 @@
         main div{
             display: inline-table;
             width: 300px;
-            height: 350px;
-            background-color: white;
+            height: 300px;
+            background-color: rgba(255, 255, 255, 0.956);
             margin: 5px 2.5px;
-            transition-duration: 0.1s;         
+            transition-duration: 0.1s;
+            box-shadow: 2px 5px 4px 2px #000000b5;        
         }
 
         main div:hover{
@@ -87,7 +90,7 @@
         div.wanderley:hover{
             background-image: url('https://pbs.twimg.com/media/FYZHunQX0AEZ-DP.jpg');
             background-size: 200%;
-            background-position: right center;
+            background-position: right top;
             transition-duration: 0s;
         }
 
@@ -97,7 +100,7 @@
 
         div.noralma:hover{
             background-image: url('https://d3ugyf2ht6aenh.cloudfront.net/stores/974/635/products/noiva-fantasma1-a265a92ef2aebd875c16573850435252-240-0.jpg');
-            background-position: bottom center;
+            background-position: center center;
         }
 
         div.barto:hover{
@@ -121,7 +124,7 @@
             text-indent: 1em;
             text-align: justify;
             font-style: italic;
-            height: 265px;
+            height: 210px;
             
             display: block;
             margin-inline-start: 0px;
